--- a/src/app/home/navigation-bar/navigation-bar.component.scss
+++ b/src/app/home/navigation-bar/navigation-bar.component.scss
@@ -1,27 +1,29 @@
 @import '/src/colors';
 
 .navigation-bar {
-  height: 100%;
-  width: 64px;
   box-sizing: border-box;
-  display: flex;
-  gap: 8px;
-  flex-direction: column;
+  height: 100%;
   padding-top: 8px;
+  width: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 
   &__navigation {
-    border-radius: 0 24px 0 0;
-    background-color: #fafafa;
-    box-shadow: inset 0px 1px 3px 1px rgb(0 0 0 / 6%);
     height: 100%;
-    display: flex;
     padding: 12px 0 16px 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
+
+    background-color: #fafafa;
+    border-radius: 0 24px 0 0;
+    box-shadow: inset 0px 1px 3px 1px rgb(0 0 0 / 6%);
   }
 
-  &__common-navigation {
+  &__modules-routes {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -47,5 +49,35 @@
     &--minimize {
       transform: rotateY(180deg);
     }
+  }
+
+  &__button-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    &--selected {
+      .navigation-bar__button-selector {
+        transform: translate(0, -50%);
+      }
+
+      .navigation-bar__button-icon {
+        color: $color-primary;
+      }
+    }
+  }
+
+  &__button-selector {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 32px;
+    width: 4px;
+
+    background: $color-primary;
+    border-radius: 0 4px 4px 0;
+
+    transform: translate(-100%, -50%);
+    transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
