feat(create-dialog): restyle icon selector

--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -104,6 +104,6 @@
 
 .categories-tree-node__content--select {
   .categories-tree-node__icon--mono {
-    filter: invert(1);
+    filter: brightness(0) invert(1);
   }
 }
