--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-details [title]="'Dashboard'" sidebarButtonIcon="bell" [sidebarTitle]="'Notifications'">
+<app-details [title]="'Dashboard'" separated="true">
   <ng-container content>
     <section class="grid grid--{{gridView}}">
     <app-dashboard-item type="changelog"
