--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,6 +1,6 @@
-<app-details [title]="name" sidebarButtonIcon="time">
+<app-details [title]="name">
   <ng-container buttons-left>
-    <app-button button-transparent routerLink="/category-details/{{parentId}}">
+    <app-button button-transparent routerLink="/maintenance/category-details/{{parentId}}">
       <mat-icon svgIcon="tree"></mat-icon>
     </app-button>
   </ng-container>
