--- a/src/app/shared/components/details/details.component.scss
+++ b/src/app/shared/components/details/details.component.scss
@@ -3,13 +3,13 @@
 @import '/src/fonts';
 
 .page {
+  position: relative;
   height: 100%;
   display: flex;
 
   background-color: white;
 
   user-select: none;
-  transition: width 0.5s ease-in-out;
 
   &__title-section {
     box-sizing: border-box;
@@ -43,6 +43,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    transition: width 0.5s ease-in-out;
   }
 
   &__content {
@@ -54,7 +55,8 @@
     height: 100%;
     gap: 16px;
     padding: 24px;
-    margin-right: 16px;
+
+    background-color: #fafafa;
 
     border-radius: 24px 24px 0 0;
   }
@@ -62,6 +64,7 @@
   &__content-shadow-cover {
     height: 100%;
     overflow: hidden;
+    margin: 0 16px 0 0;
   }
 
   &__shadow {
@@ -74,18 +77,9 @@
     pointer-events: none;
     z-index: 102;
     left: 0px;
-    margin-right: 16px;
+    margin: inherit;
 
     transition: width 0.5s ease-in-out;
-
-    &--cover {
-      z-index: 0;
-
-      background-color: #fafafa;
-      box-shadow: none;
-
-      transition: width 0.5s ease-in-out;
-    }
 
     &:after {
       background: white;
@@ -117,5 +111,25 @@
     position: relative;
     height: 100%;
     width: 100%;
+  }
+
+  &--opened-side-bar {
+    .page__main {
+      width: calc(100% - 300px);
+    }
+
+    .page__shadow {
+      width: calc(100% - 300px - 16px);
+    }
+  }
+
+  &--separated {
+    .page__main {
+      width: 100%;
+    }
+
+    .page__content-shadow-cover {
+      margin: 0 16px;
+    }
   }
 }
