refactor(app): group icons

--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -9,9 +9,7 @@
        (click)="onSelect()"
        (contextmenu)="onContextMenu($event)">
     <div class="categories-tree-node__icon-container" *ngIf="!isSubNode">
-      <img class="categories-tree-node__icon"
-            [class.categories-tree-node__icon--mono]="settingsService.settings.appearance.type === IconTypeEnum.Mono"
-            [src]="iconsPath + (child.illustration || 'wrench.svg')">
+      <mat-icon class="categories-tree-node__icon" [svgIcon]="'illustrations:' + (child.illustration?.replace('.svg', '') || 'wrench')"></mat-icon>
     </div>
     <span class="categories-tree-node__name">
       {{child.name}}
