--- a/src/app/shared/components/create-dialog/create-dialog.component.scss
+++ b/src/app/shared/components/create-dialog/create-dialog.component.scss
@@ -57,7 +57,7 @@
     height: 38px;
     width: 38px;
     border-radius: 12px;
-    background: white;
+    color: #4b4848;
     display: flex;
     align-items: center;
     justify-content: center;
