--- a/src/app/shared/components/create-dialog/create-dialog.component.html
+++ b/src/app/shared/components/create-dialog/create-dialog.component.html
@@ -12,7 +12,7 @@
           {{"DIALOG.VALIDATIONS.NAME" | translate}}
         </mat-error>
       </mat-form-field>
-      <section *ngIf="!data.parentId" class="create-dialog__icons-container">
+      <section class="create-dialog__icons-container">
         <span class="create-dialog__icons-container-title">{{"DIALOG.FIELDS.ILLUSTRATION" | translate}}</span>
         <section class="create-dialog__icons-container-content">
           <div class="create-dialog__icons-section">
