--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -8,7 +8,7 @@
        [class.categories-tree-node__content--select]="selected === child.id"
        (click)="onSelect()"
        (contextmenu)="onContextMenu($event)">
-    <div class="categories-tree-node__icon-container" *ngIf="!isSubNode">
+    <div class="categories-tree-node__icon-container">
       <mat-icon class="categories-tree-node__icon" [svgIcon]="'illustrations:' + (child.illustration?.replace('.svg', '') || 'wrench')"></mat-icon>
     </div>
     <span class="categories-tree-node__name">
@@ -33,7 +33,6 @@
       <div class="categories-tree-node__sub-node-item">
         <app-categories-tree-node *ngFor="let c of child.children"
                                   [selected]="selected"
-                                  [isSubNode]="true"
                                   [child]="c"
                                   (edit)="onEdit(c)"
                                   (select)="onSelect(c)"
