feat(app): add translation for navigations

--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -20,12 +20,12 @@
 
         <mat-divider class="settings__divider"></mat-divider>
 
-        <app-setting [label]="'Start page' | translate" icon="meeting_room">
+        <app-setting [label]="'PAGES.SETTINGS.FIELDS.START_PAGE' | translate" icon="meeting_room">
           <div class="settings__item-field settings__item-field--disable">
             <mat-form-field class="settings__item-field settings__item-field--select">
               <mat-select [value]="settingsService.settings.startPage" (valueChange)="onStartPageChanged($event)">
                 <mat-option *ngFor="let page of startPageOptions" [value]="page.value">
-                  {{page.name}}
+                  {{page.name | translate}}
                 </mat-option>
               </mat-select>
               <mat-icon svgIcon="expand" class="mat-select__expand-icon"></mat-icon>
