--- a/src/app/home/navigation-bar/navigation-bar.component.html
+++ b/src/app/home/navigation-bar/navigation-bar.component.html
@@ -10,7 +10,7 @@
           routerLinkActive="navigation-bar__button-container--selected">
         <div class="navigation-bar__button-selector"></div>
           <app-button button-transparent
-                      [matTooltip]="button.tooltipText"
+                      [matTooltip]="button.tooltipText | translate"
                       matTooltipPosition="right">
             <mat-icon class="navigation-bar__button-icon" [svgIcon]="button.icon"></mat-icon>
           </app-button>
