feat(print-dialog): update border for selected column

--- a/src/app/shared/components/print-dialog/print-dialog.component.scss
+++ b/src/app/shared/components/print-dialog/print-dialog.component.scss
@@ -189,7 +189,7 @@
 
   .column {
     border-radius: 12px;
-    border: 1.5px solid #ebebeb;
+    border: 1.5px solid $color-primary;
   }
 
   .column__divider {
