--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
-<app-details [title]="'Dashboard'" separated="true">
+<app-details [title]="'NAVIGATIONS.DASHBOARD' | translate" separated="true">
   <ng-container content>
     <section class="grid grid--{{gridView}}">
     <app-dashboard-item type="changelog"
                         header="4.0.0"
-                        description="See what's new"
+                        [description]="'PAGES.DASHBOARD.CHANGELOG.DESCRIPTION' | translate"
                         class="card"
                         (click)="openReleaseNotes()">
     </app-dashboard-item>
 
     <app-dashboard-item type="feedback"
                         size="s"
-                        header="Feedback"
-                        description="Request feature report bug"
+                        [header]="'PAGES.DASHBOARD.FEEDBACK.TITLE' | translate"
+                        [description]="'PAGES.DASHBOARD.FEEDBACK.DESCRIPTION' | translate"
                         class="item2"
                         (click)="openFeedbackDialog()">
     </app-dashboard-item>
@@ -19,19 +19,20 @@
     <app-dashboard-item type="sourceCode"
                         external="true"
                         size="s"
-                        header="Source code"
-                        description="Clone, edit and even more"
+                        [header]="'PAGES.DASHBOARD.SOURCE_CODE.TITLE' | translate"
+                        [description]="'PAGES.DASHBOARD.SOURCE_CODE.DESCRIPTION' | translate"
                         class="item3"
                         (click)="openGitHub()">
     </app-dashboard-item>
 
-        <app-dashboard-item type="documentation"
-                            header="Documentation"
-                            description="How to use?"
-                            external="true"
-                            class="item4"
-                            (click)="openDocumentation()">
-        </app-dashboard-item>
+    <app-dashboard-item *ngIf="false"
+                        type="documentation"
+                        header="Documentation"
+                        description="How to use?"
+                        external="true"
+                        class="item4"
+                        (click)="openDocumentation()">
+    </app-dashboard-item>
 </section>
   </ng-container>
 </app-details>
