--- a/src/app/shared/components/rich-widget/rich-widget.component.scss
+++ b/src/app/shared/components/rich-widget/rich-widget.component.scss
@@ -12,7 +12,7 @@
   gap: 8px;
 
   background: white;
-  box-shadow: rgb(0 0 0 / 10%) 0px 1px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   transition: box-shadow 0.3s ease-in;
   padding: 16px 16px 12px 16px;
 
