feat(app): release fixes

--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -84,7 +84,7 @@
 
     <section class="category-details__tables">
       <div class="category-details__tables-title">
-        <span>Группы</span>
+        <span>{{'PAGES.CATEGORY_DETAILS.GROUPS' | translate}}</span>
         <div class="category-details__tables-title-buttons" *ngIf="false">
           <app-button button-transparent (click)="onAddRecord()">
             <mat-icon svgIcon="add"></mat-icon>
